--- a/index .html
+++ b/index .html
@@ -45,7 +45,7 @@ Water is transported from the roots to the rest of the plant through special ves
             console.log (username);
             let age=prompt("what yor age for plant" )
             console.log (age)
-            alert ( hi,+username+"your plant "
+            alert ("hi" +username+"your plant "
             +age +"nice to be here ");
 
         </script>
